--- a/main.css
+++ b/main.css
@@ -4,18 +4,46 @@ html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 h1 {
     font-size: 50px;
     color:  #f2f2f2;
+    margin-bottom: 0;
+    font-weight: normal;
 }
 
 h2 {
     font-size: 18px;
     color:  #f2f2f2;
+    margin-top: 0;
 }
 
 p {
     color:  #f2f2f2;
 }
+
+
+.me {
+    height: 150px;
+    border-radius: 100%;
+    border-style: solid;
+    border-color: #f2f2f2;
+}
+
+
+
+#wrapper {
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 40px;
+    text-align: center;
+    font-size: 14px;
+}
+
+
+
+
+
